# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/wifi/wifi/wifi.gni")

ohos_shared_library("wifi") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = false  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = false  # Enable integer overflow detection
    ubsan = false  # Enable some Ubsan options
    debug = false
  }
  install_enable = true
  include_dirs = [
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/log",
    "$WIFI_ROOT_DIR/frameworks/native/interfaces",
    "$WIFI_ROOT_DIR/interfaces/inner_api",
    "$WIFI_ROOT_DIR/frameworks/native/include",
    "$WIFI_ROOT_DIR/frameworks/native/src",
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
    "$WIFI_ROOT_DIR/utils/inc",
    "$WIFI_ROOT_DIR/frameworks/js/napi/inc",
  ]

  sources = [
    "src/wifi_napi_device.cpp",
    "src/wifi_napi_entry.cpp",
    "src/wifi_napi_errcode.cpp",
    "src/wifi_napi_event.cpp",
    "src/wifi_napi_hotspot.cpp",
    "src/wifi_napi_p2p.cpp",
    "src/wifi_napi_utils.cpp",
  ]

  deps = [
    "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk",
    "$WIFI_ROOT_DIR/utils:wifi_utils",
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit:wifi_toolkit",
  ]

  defines = []
  if (wifi_feature_with_random_mac_addr) {
    defines += [ "SUPPORT_RANDOM_MAC_ADDR" ]
  }

  external_deps = [
    "ability_runtime:app_context",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  cflags = memory_optimization_cflags
  cflags_cc = memory_optimization_cflags_cc
  ldflags = memory_optimization_ldflags
  relative_install_dir = "module"
  part_name = "wifi"
  subsystem_name = "communication"
}

ohos_shared_library("wifiext") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = false  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = false  # Enable integer overflow detection
    ubsan = false  # Enable some Ubsan options
    debug = false
  }
  install_enable = true
  include_dirs = [
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/log",
    "$WIFI_ROOT_DIR/interfaces/inner_api",
    "$WIFI_ROOT_DIR/frameworks/native/include",
    "$WIFI_ROOT_DIR/frameworks/native/interfaces",
    "$WIFI_ROOT_DIR/frameworks/js/napi/inc",
  ]

  sources = [
    "src/wifi_ext_napi_entry.cpp",
    "src/wifi_ext_napi_hotspot.cpp",
    "src/wifi_napi_errcode.cpp",
    "src/wifi_napi_utils.cpp",
  ]
  deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  defines = []
  if (wifi_feature_with_ap_extension) {
    defines += [ "FEATURE_AP_EXTENSION" ]
  }

  if (wifi_feature_with_random_mac_addr) {
    defines += [ "SUPPORT_RANDOM_MAC_ADDR" ]
  }
  cflags = memory_optimization_cflags
  cflags_cc = memory_optimization_cflags_cc
  ldflags = memory_optimization_ldflags
  relative_install_dir = "module"
  part_name = "wifi"
  subsystem_name = "communication"
}

ohos_shared_library("wifimanager") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = false  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = false  # Enable integer overflow detection
    ubsan = false  # Enable some Ubsan options
    debug = false
  }
  install_enable = true
  include_dirs = [
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/log",
    "$WIFI_ROOT_DIR/frameworks/native/interfaces",
    "$WIFI_ROOT_DIR/interfaces/inner_api",
    "$WIFI_ROOT_DIR/frameworks/native/include",
    "$WIFI_ROOT_DIR/frameworks/native/src",
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
    "$WIFI_ROOT_DIR/utils/inc",
    "$WIFI_ROOT_DIR/frameworks/js/napi/inc",
  ]
  sources = [
    "src/wifi_napi_device.cpp",
    "src/wifi_napi_entry.cpp",
    "src/wifi_napi_errcode.cpp",
    "src/wifi_napi_event.cpp",
    "src/wifi_napi_hotspot.cpp",
    "src/wifi_napi_p2p.cpp",
    "src/wifi_napi_utils.cpp",
  ]
  deps = [
    "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk",
    "$WIFI_ROOT_DIR/utils:wifi_utils",
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit:wifi_toolkit",
  ]
  defines = [ "ENABLE_NAPI_WIFI_MANAGER" ]

  if (wifi_feature_with_random_mac_addr) {
    defines += [ "SUPPORT_RANDOM_MAC_ADDR" ]
  }

  external_deps = [
    "ability_runtime:app_context",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  cflags = memory_optimization_cflags
  cflags_cc = memory_optimization_cflags_cc
  ldflags = memory_optimization_ldflags
  relative_install_dir = "module"
  part_name = "wifi"
  subsystem_name = "communication"
}

ohos_shared_library("wifimanagerext") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = false  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = false  # Enable integer overflow detection
    ubsan = false  # Enable some Ubsan options
    debug = false
  }
  install_enable = true
  include_dirs = [
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/log",
    "$WIFI_ROOT_DIR/interfaces/inner_api",
    "$WIFI_ROOT_DIR/frameworks/native/include",
    "$WIFI_ROOT_DIR/frameworks/native/interfaces",
    "$WIFI_ROOT_DIR/frameworks/js/napi/inc",
  ]

  sources = [
    "src/wifi_ext_napi_entry.cpp",
    "src/wifi_ext_napi_hotspot.cpp",
    "src/wifi_napi_errcode.cpp",
    "src/wifi_napi_utils.cpp",
  ]
  deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]
  defines = [ "ENABLE_NAPI_WIFI_MANAGER" ]
  if (wifi_feature_with_ap_extension) {
    defines += [ "FEATURE_AP_EXTENSION" ]
  }
  if (wifi_feature_with_random_mac_addr) {
    defines += [ "SUPPORT_RANDOM_MAC_ADDR" ]
  }
  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  cflags = memory_optimization_cflags
  cflags_cc = memory_optimization_cflags_cc
  ldflags = memory_optimization_ldflags
  relative_install_dir = "module"
  part_name = "wifi"
  subsystem_name = "communication"
}
